[gd_scene load_steps=6 format=3 uid="uid://elchojioye1w"]

[ext_resource type="Script" path="res://game_manager/game_manager.gd" id="1_ox815"]
[ext_resource type="PackedScene" uid="uid://k1vdft31yg6c" path="res://world/world.tscn" id="3_0svwp"]
[ext_resource type="PackedScene" uid="uid://cx54vgawhxneq" path="res://player/player.tscn" id="3_cbwhp"]
[ext_resource type="PackedScene" uid="uid://cabevbdy85a88" path="res://ui/ui.tscn" id="4_x4qbu"]
[ext_resource type="Script" path="res://game_manager/camera.gd" id="5_h6k8m"]

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_ox815")
PlayerScene = ExtResource("3_cbwhp")
WorldScene = ExtResource("3_0svwp")

[node name="UI" parent="." instance=ExtResource("4_x4qbu")]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("5_h6k8m")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="load_game" from="UI" to="." method="_on_ui_load_game"]
[connection signal="new_game" from="UI" to="." method="_on_ui_new_game"]
[connection signal="save_game" from="UI" to="." method="_on_ui_save_game"]
[connection signal="toggle_game_paused" from="UI" to="." method="_on_ui_toggle_game_paused"]
